@@ -6,7 +6,7 @@
  *
  * (c) 2002 Wolfgang Scherr <scherr@net4you.at>
  *
- * $Id: videocodec.h,v 1.1.2.4 2003-01-14 21:15:03 rbultje Exp $
+ * $Id: videocodec.h,v 1.1.2.5 2004-02-26 16:35:22 rbultje Exp $
  *
  * ------------------------------------------------------------------------
  *
@@ -249,6 +249,7 @@ struct tvnorm {
 };
 
 struct videocodec {
+	struct module *owner;
 	/* -- filled in by slave device during register -- */
 	char name[32];
 	unsigned long magic;	/* may be used for client<->master attaching */
