@@ -16,6 +16,8 @@ Version 0.9.4 -> 0.9.5
 * fix memleaks in i2c client error cases
 * fix DC30 field order problem and +/- 64 lines noise at top
 * fix DC30 quality (by Kieran Morrissey <linux@mgpenguin.net>)
+* fix module counting in videocodec modules (patch by Christoph Hellwig
+    <hch@lst.de>) and add some sort of emulation of module_put/get for 2.4.x
 
 Version 0.9.3 -> 0.9.4
 ----------------------
